# irods_client_globus_connector

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakeLists.txt.bak  README.md
DSI/: globus_gridftp_server_iRODS.c  globus_gridftp_server_iRODS.cpp  libirodsmap.c
cmake/Modules/: FindGlobus.cmake
lib/: CMakeLists.txt
lib/globus_hasher/: CMakeLists.txt
lib/globus_hasher/include/: ADLER32Strategy.hpp  HashStrategy.hpp  Hasher.hpp  MD5Strategy.hpp  SHA1Strategy.hpp  SHA256Strategy.hpp  SHA512Strategy.hpp  checksum.hpp  irods_globus_base64.hpp  irods_hasher_factory.hpp
lib/globus_hasher/src/: ADLER32Strategy.cpp  Hasher.cpp  MD5Strategy.cpp  SHA1Strategy.cpp  SHA256Strategy.cpp  SHA512Strategy.cpp  irods_globus_base64.cpp  irods_hasher_factory.cpp
lib/gridmap_callout/: CMakeLists.txt  gridmap_iRODS_callout.conf
lib/irods_dsi/: CMakeLists.txt
lib/irods_dsi/src/: globus_gridftp_server_iRODS.cpp
lib/irods_login/include/: clientLogin.hpp
lib/irods_login/src/: clientLogin.cpp
lib/irodsmap/: CMakeLists.txt
lib/pid_manager/: CMakeLists.txt
tests/: __init__.py  ftp_commands.txt  globus_test.py  run_all_tests.py
tests/docker/: README.md  docker-compose.yml  globus.debian11.Dockerfile  globus.debian12.Dockerfile  globus.debian13.Dockerfile  globus.el10.Dockerfile  globus.el8.Dockerfile  globus.el9.Dockerfile  globus.ubuntu20.Dockerfile  globus.ubuntu22.Dockerfile  globus.ubuntu24.Dockerfile  install_local_irods_client_packages_debian11.sh  install_local_irods_client_packages_debian12.sh  install_local_irods_client_packages_debian13.sh  install_local_irods_client_packages_el10.sh  install_local_irods_client_packages_el8.sh  install_local_irods_client_packages_el9.sh  install_local_irods_client_packages_ubuntu20.sh  install_local_irods_client_packages_ubuntu22.sh  install_local_irods_client_packages_ubuntu24.sh  irods.ubuntu22.Dockerfile  start.globus.run.tests.el.sh  start.globus.run.tests.ubuntu.sh  start.irods.ubuntu22.sh
tests/libs/: README.md  __init__.py  execute.py  lib.py  utility.py
